--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "native-base": "^3.1.0",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-get-random-values": "^1.7.0",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-svg": "^12.1.1",
     "styled-components": "^5.3.1",
-    "styled-system": "^5.1.5"
+    "styled-system": "^5.1.5",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
