--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.7",
+    "@react-native-community/async-storage": "^1.12.1",
     "moment": "^2.29.1",
     "native-base": "^3.1.0",
     "react": "17.0.2",
