fixing status bar

--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   "dependencies": {
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
+    "moment": "^2.29.1",
+    "native-base": "^3.1.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-web": "~0.13.12",
-    "moment": "^2.29.1",
-    "native-base": "^3.1.0",
     "react-native-get-random-values": "^1.7.0",
-    "react-native-safe-area-context": "^3.3.0",
-    "react-native-svg": "^12.1.1",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-svg": "12.1.1",
+    "react-native-uuid": "^2.0.1",
+    "react-native-web": "~0.13.12",
     "styled-components": "^5.3.1",
     "styled-system": "^5.1.5",
     "uuid": "^8.3.2"
